bug: fixing of merging #3 responsiveness on mobile devices

--- a/css/base/responsiveness.css
+++ b/css/base/responsiveness.css
@@ -25,7 +25,7 @@
   }
 
   .logo {
-    font-size: 4rem;
+    font-size: 2rem;
     top: 55px;
     left: 10px;
   }
